space-tourism-website-main/style/index.css
/* ------------------ */
/* Custom properties  */
/* ------------------ */

:root {
  --clr-dark: 230 35% 7%;
  --clr-light: 231 77% 90%;
  --clr-white: 0 0% 100%;

  --fs-900: clamp(5rem, 12vw + 1rem, 9.375rem);
  --fs-800: 3.5rem;
  --fs-700: 1.5rem;
  --fs-600: 1rem;
  --fs-500: 1rem;
  --fs-400: 0.9375rem;
  --fs-300: 1rem;
  --fs-200: 0.875rem;

  --lh-400: 1.67;

  --ff-serif: 'Bellefair', serif;
  --ff-sans-cond: 'Barlow Condensed', sans-serif;
  --ff-sans-normal: 'Barlow', sans-serif;
}

@media (min-width: 35em) {
  :root {
    --fs-800: 5rem;
    --fs-700: 2.5rem;
    --fs-600: 1.5rem;
    --fs-500: 1.25rem;
    --fs-400: 1rem;
    --fs-200: 1rem;

    --lh-400: 1.75;
  }
}

@media (min-width: 55em) {
  :root {
    --fs-800: 6.25rem;
    --fs-700: 3.5rem;
    --fs-600: 2rem;
    --fs-500: 1.75rem;
    --fs-400: 1.125rem;

    --lh-400: 1.78;
  }
}

/* ------------------ */
/* General reset      */
/* ------------------ */

*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-weight: 400;
}

img,
picture {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

body {
  display: grid;
  grid-template-rows: min-content 1fr;
  background-color: hsl(var(--clr-dark));
  color: hsl(var(--clr-white));
  font-family: var(--ff-sans-normal);
  font-size: var(--fs-400);
  line-height: 1.5;
  min-height: 100vh;
}

/* --------------------- */
/* Background image      */
/* --------------------- */

body {
  background-size: cover;
  background-position: bottom center;
}

.home {
  background-image: url('../assets/background/background-home-mobile.jpg');
}

.destination {
  background-image: url('../assets/destination/background-destination-mobile.jpg');
}

.crew {
  background-image: url('../assets/crew/background-crew-mobile.jpg');
}

.technology {
  background-image: url('../assets/technology/background-technology-mobile.jpg');
}

@media (min-width: 35rem) {
  .home {
    background-image: url('../assets/background/background-home-tablet.jpg');
    background-position: center center;
  }

  .destination {
    background-image: url('../assets/destination/background-destination-tablet.jpg');
  }

  .crew {
    background-image: url('../assets/crew/background-crew-tablet.jpg');
  }

  .technology {
    background-image: url('../assets/technology/background-technology-tablet.jpg');
  }
}

@media (min-width: 55rem) {
  .home {
    background-image: url('../assets/background/background-home-desktop.jpg');
  }

  .destination {
    background-image: url('../assets/destination/background-destination-desktop.jpg');
  }

  .crew {
    background-image: url('../assets/crew/background-crew-desktop.jpg');
  }

  .technology {
    background-image: url('../assets/technology/background-technology-desktop.jpg');
  }
}

/* ------------------ */
/* Utility classes    */
/* ------------------ */

/* Reusable layout classes */

.flex {
  display: flex;
  gap: var(--gap, 1rem);
}

.grid {
  display: grid;
  gap: var(--gap, 1rem);
}

.d-block {
  display: block;
}

.container {
  padding-inline: 2em;
  margin-inline: auto;
  max-width: 80rem;
}

.grid-container {
  display: grid;
  place-items: center;
  text-align: center;
  padding-inline: 1.5rem;
}

/* A11y classes */
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

.skip-to-content {
  position: absolute;
  left: 25%;
  background: hsl(var(--clr-white));
  color: hsl(var(--clr-dark));
  transform: translateY(-100%);
  width: fit-content;
  z-index: 99;
  padding: 0.5em;
  transition: transform 0.2s ease-in;
}

.skip-to-content:focus {
  transform: translateY(0);
}

/* Color classes      */

.bg-dark {
  background-color: hsl(var(--clr-dark));
}

.bg-light {
  background-color: hsl(var(--clr-light));
}

.bg-white {
  background-color: hsl(var(--clr-white));
}

.bg-none {
  background-color: transparent;
}

.text-dark {
  color: hsl(var(--clr-dark));
}

.text-light {
  color: hsl(var(--clr-light));
}

.text-white {
  color: hsl(var(--clr-white));
}

/* Typography classes */

.ff-serif {
  font-family: var(--ff-serif); /* bellefair */
}

.ff-sans-cond {
  font-family: var(--ff-sans-cond); /* barlow cond */
}

.ff-sans-normal {
  font-family: var(--ff-sans-normal); /* barlow */
}

.letter-spacing-1 {
  letter-spacing: 4.75px;
}

.letter-spacing-2 {
  letter-spacing: 2.7px;
}

.letter-spacing-3 {
  letter-spacing: 2.35px;
}

.uppercase {
  text-transform: uppercase;
}

.fs-900 {
  font-size: var(--fs-900);
}

.fs-800 {
  font-size: var(--fs-800);
}

.fs-700 {
  font-size: var(--fs-700);
}

.fs-600 {
  font-size: var(--fs-600);
}

.fs-500 {
  font-size: var(--fs-500);
}

.fs-400 {
  font-size: var(--fs-400);
}

.fs-300 {
  font-size: var(--fs-300);
}

.fs-200 {
  font-size: var(--fs-200);
}

.fs-900,
.fs-800,
.fs-700,
.fs-600 {
  line-height: 1.1;
}

.lh-400 {
  line-height: var(--lh-400);
}

/* Utility classes */

.numbered-title {
  font-family: var(--ff-sans-cond);
  font-size: var(--fs-500);
  margin-top: 1.5rem;
  text-transform: uppercase;
}

.numbered-title span {
  color: hsl(var(--clr-white) / 0.3);
  margin-right: 1rem;
}

/* -------------------*/
/* Components         */
/* -------------------*/

/* Explore button     */

.large-button {
  font-size: 1.25rem;
  letter-spacing: 1.25px;
  position: relative;
  z-index: 1;
  display: inline-grid;
  place-items: center;
  padding: 0 1.4em;
  border-radius: 50%;
  aspect-ratio: 1;
  text-decoration: none;
}

.large-button::after {
  content: '';
  position: absolute;
  z-index: -1;
  background-color: hsl(var(--clr-white) / 0.1);
  opacity: 0;
  height: 100%;
  width: 100%;
  border-radius: inherit;
  transition: transform 0.4s ease-in-out, opacity 0.5s linear;
}

.large-button:hover::after,
.large-button:focus::after {
  opacity: 1;
  transform: scale(1.5);
}
/* ... */

